src/simpleLan/grammar/Simple.bnf
{
    tokens = [

        BRACKET = 'regexp:[{}]'
        ID = 'regexp:[a-zA-Z_][a-zA-Z0-9_]*'
        SEP = 'regexp::'
        WHITE_SPACE = 'regexp:\s+'
    ]




  parserClass="simpleLan.parser.SimpleParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Simple"
  psiImplClassSuffix="Impl"
  psiPackage="simpleLan.psi"
  psiImplPackage="simpleLan.psi.impl"

  elementTypeHolderClass="simpleLan.psi.SimpleTypes"
  elementTypeClass="simpleLan.psi.SimpleElementType"
  tokenTypeClass="simpleLan.psi.SimpleTokenType"

  psiImplUtilClass="simpleLan.psi.impl.SimplePsiImplUtil"
  generateTokenAccessors=true
  generateTokens=true
}

simpleFile ::= Type*

private Type ::= (DataType | Entity | COMMENT)

DataType ::= datatype  Entity {


}

Entity ::= ent  ID  "{"
    Feature*
    "}" {
    mixin="simpleLan.psi.impl.SimpleNamedElementImpl"
    implements="simpleLan.psi.SimpleNamedElement"
    methods=[SimpleEntityGetID getName setName getNameIdentifier]



    }
Feature ::= ID ":" Type
